feat: implement email notification system and local/JWT authentication strategies, replacing ClerkAuthGuard and external user handling.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
-PORT=3000
-CLERK_SECRET_KEY=sk_test_...
-CLERK_PUBLISHABLE_KEY=pk_test_...
-CLERK_WEBHOOK_SECRET=whsec_...
+PORT=8000
+
+# Email Configuration
+EMAIL_PROVIDER=test  # Options: test, resend, nodemailer
+RESEND_API_KEY=re_xxxx...xxxxxx
+
+# SMTP Configuration (for nodemailer)
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your-email@example.com
+SMTP_PASS=your-password
