--- a/package.json
+++ b/package.json
@@ -20,15 +20,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^5.1.6",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/cqrs": "^11.0.3",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.3",
+    "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
     "joi": "^18.0.1",
+    "nodemailer": "^7.0.11",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.5.2",
     "rxjs": "^7.8.1",
     "svix": "^1.81.0",
     "uuid": "^13.0.0"
@@ -42,6 +50,8 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -75,7 +85,6 @@
       "!src/main.ts",
       "!src/**/*.module.ts",
       "!src/context/identity/application/handlers/ExternalUserCreatedHandler.ts",
-      "!src/context/identity/infrastructure/http/guards/ClerkAuthGuard.ts",
       "!src/context/identity/infrastructure/http/webhook/EmailCreatedEventWebhook.ts",
       "!src/context/shared/infrastructure/NestCqrsEventBus.ts"
     ],
