--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/swagger": "^11.2.3",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "joi": "^18.0.1",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
