feat: Implement real-time auction updates via WebSockets and background job processing with BullMQ.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,17 @@ SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=your-email@example.com
 SMTP_PASS=your-password
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# WebSocket Configuration
+WEBSOCKET_CORS_ORIGIN=http://localhost:3000
+WEBSOCKET_ENABLED=true
+
+# BullMQ Configuration
+BULLMQ_CONCURRENCY=5
+BULLMQ_MAX_RETRIES=5
+BULLMQ_ENABLED=true
