--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/swagger": "^11.2.3",
+    "@nestjs/websockets": "^11.1.9",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
+    "bullmq": "^5.65.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "ioredis": "^5.8.2",
     "joi": "^18.0.1",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
@@ -40,6 +44,7 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.5.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "svix": "^1.81.0",
     "uuid": "^13.0.0"
   },
@@ -54,6 +59,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
