feat: Introduce Drizzle ORM for Identity and Auction persistence, adding Drizzle repositories, schemas, and related infrastructure.

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,10 @@ WEBSOCKET_ENABLED=true
 BULLMQ_CONCURRENCY=5
 BULLMQ_MAX_RETRIES=5
 BULLMQ_ENABLED=true
+
+# Database Configuration
+POSTGRES_USER=auction_db
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=auction_db
+DB_HOST=localhost
+DB_PORT=5432
