--- a/package.json
+++ b/package.json
@@ -31,16 +31,20 @@
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/websockets": "^11.1.9",
     "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.65.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "drizzle-kit": "^0.31.8",
+    "drizzle-orm": "^0.45.0",
     "ioredis": "^5.8.2",
     "joi": "^18.0.1",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.5.2",
     "rxjs": "^7.8.1",
