--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@nestjs/swagger": "^11.2.3",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
+    "drizzle-orm": "^0.36.2",
+    "ioredis": "^5.4.2",
     "joi": "^18.0.1",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.5.2",
     "rxjs": "^7.8.1",
@@ -53,6 +56,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "drizzle-kit": "^0.30.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
