feat(whatsapp): implement core whatsapp functionality with baileys integration
- Add use cases for session management, message handling and connection updates
- Implement Baileys client adapter with Redis auth state persistence
- Add WebSocket gateway for real-time events
- Create controllers for session and message management
- Add database schema and repositories for whatsapp entities
- Configure module dependencies and providers

--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/swagger": "^11.2.3",
+    "@nestjs/websockets": "^11.1.9",
     "@types/nodemailer": "^7.0.4",
+    "baileys": "7.0.0-rc.9",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.36.2",
     "ioredis": "^5.4.2",
     "joi": "^18.0.1",
@@ -41,6 +45,7 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.5.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "svix": "^1.81.0",
     "uuid": "^13.0.0"
   },
